--- a/values.yaml
+++ b/values.yaml
@@ -74,4 +74,4 @@ affinity:
             - key: kubernetes.io/hostname
               operator: In
               values:
-                - k8s-worker1.local
+                - k8s-master.local
