--- a/values.yaml
+++ b/values.yaml
@@ -1,10 +1,10 @@
-replicaCount: 1
+replicaCount: 2
 
 image:
   registry: docker.io
-  repository: dungxbuns/vdt-lab-backend
+  repository: dungxbuns/vdt-lab-frontend
   pullPolicy: IfNotPresent
-  tag: "v7"
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -32,8 +32,8 @@ securityContext: {}
 
 service:
   type: "NodePort"
-  nodePort: 30012
-  port: 6868
+  nodePort: 30011
+  port: 3000
 
 ingress:
   enabled: false
@@ -57,7 +57,7 @@ resources: {}
 livenessProbe:
   httpGet:
     path: /
-    port: 80
+    port: 3000
 # readinessProbe:
 #   httpGet:
 #     path: /
@@ -86,39 +86,3 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
-
-secrets:
-  name: api-secrets
-  type: Opaque
-  data:
-    DB_USER: cG9zdGdyZXM=
-    DB_PASS: YnVu
-    DB_NAME: c3R1ZGVudHM=
-    DB_HOST: ZGI=
-    DB_PORT: NTQzMg==
-
-postgresql:
-  enabled: true
-  image:
-    registry: docker.io
-    repository: postgres
-    tag: latest
-  service:
-    port: 5432
-  resources: {}
-  env:
-    - name: POSTGRES_USER
-      valueFrom:
-        secretKeyRef:
-          name: api-secrets
-          key: DB_USER
-    - name: POSTGRES_PASSWORD
-      valueFrom:
-        secretKeyRef:
-          name: api-secrets
-          key: DB_PASS
-    - name: POSTGRES_DB
-      valueFrom:
-        secretKeyRef:
-          name: api-secrets
-          key: DB_NAME
