--- a/values.yaml
+++ b/values.yaml
@@ -4,7 +4,7 @@ image:
   registry: docker.io
   repository: dungxbuns/vdt-lab-frontend
   pullPolicy: IfNotPresent
-  tag: "latest"
+  tag: "v7"
 
 imagePullSecrets: []
 nameOverride: ""
