--- a/values.yaml
+++ b/values.yaml
@@ -1,39 +1,21 @@
 replicaCount: 2
 
 image:
-  registry: docker.io
-  repository: dungxbuns/vdt-lab-frontend
-  pullPolicy: IfNotPresent
-  tag: "v7"
-
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-
-serviceAccount:
-  create: true
-  automount: true
-  annotations: {}
-  name: ""
-
-podAnnotations: {}
-podLabels: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+  web:
+    registry: docker.io
+    repository: dungxbuns/vdt-lab-frontend
+    pullPolicy: IfNotPresent
+    tag: "v7"
+  nginx:
+    registry: docker.io
+    repository: nginx
+    pullPolicy: IfNotPresent
+    tag: "latest"
 
 service:
-  type: "NodePort"
+  type: NodePort
+  port: 80
   nodePort: 30011
-  port: 3000
 
 ingress:
   enabled: false
@@ -54,32 +36,12 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
-livenessProbe:
-  httpGet:
-    path: /
-    port: 3000
-# readinessProbe:
-#   httpGet:
-#     path: /
-#     port: 8080
-
 autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
-
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
 
 nodeSelector: {}
 
