--- a/values.yaml
+++ b/values.yaml
@@ -26,6 +26,17 @@ serviceAccount:
   create: true
   name: ""
 
+ingress:
+  enabled: false
+  className: ""
+  annotations: {}
+  hosts:
+    - host: chart-example.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: []
+
 resources: {}
   # limits:
   #   cpu: 100m
